# madness-benchmark

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
madness_benchmark/: __init__.py  benchmark_config.yaml  boxplot.py  dataset_generator.py  metrics.py  utils.py
madness_benchmark/btksims/: create_tf_datasets.py  sampling.py  simulate_test_dataset.py  train_val_sims.py
madness_benchmark/examples/: evaluate_speed.py  run_scarlet.py  train_vae.py
notebooks/: 1. Introduction_snr.ipynb  2. Dataset.ipynb  3. Method.ipynb  4.2 Aperture photometry.ipynb  4.2 Thesis aperture photometry plot.ipynb  4.3 Color.ipynb  4.4 Morphology.ipynb  4.4 Shapes.ipynb  4.5 Shape.ipynb  6. Appendix C.ipynb  6. Appendix D.ipynb  6. Appendix.ipynb  additional_plots.ipynb  basic_tests.ipynb  catsim_snr_cut.ipynb  compare_color_results_high_density.ipynb  compare_results_high_density.ipynb  test_simultaneous_deblending.ipynb
notebooks/Others/: basic_tests.ipynb  catsim_snr_cut.ipynb  compare_results_high_density.ipynb  simulations.ipynb
scripts/simulations/: create_tf_datasets.py  simulate_test_dataset.py  snr.py  train_val_sims.py
scripts/testing/: run_madness.py  run_scarlet.py
scripts/training/: train_vae.py
